Calude corrections on spelling/grammar and consistency

--- a/secs/0-front/1-comittee.tex
+++ b/secs/0-front/1-comittee.tex
@@ -3,7 +3,7 @@
 % and should NOT be listed in your TABLE OF CONTENTS.
 
 \begin{statement}
-    % Delete or add \entry commands as needed for all committe members.
+    % Delete or add \entry commands as needed for all committee members.
     \entry{Dr.~Bin Yao, Co-chair}{School of Mechanical Engineering}
     \entry{Dr.~Peter H. Meckl, Co-chair}{School of Mechanical Engineering}
     \entry{Dr.~Richard M. Voyles}{Robotics and Automation Chair, University of Texas at Arlington}
