--- a/secs/0-front/3-acknowledgments.tex
+++ b/secs/0-front/3-acknowledgments.tex
@@ -1,9 +1,9 @@
 \begin{acknowledgments}
-I would like to acknowledge the support of my co-advisors, Professor Bin Yao and Professor Peter H. Meckl, for their consistent guidance, insights, and feedback throughout my PhD studies. I am deeply thankful to Professor Bin Yao for training me in control theory and for his continual encouragement and advice, which were instrumental in bringing this research together. I am grateful for the opportunity to pursue my PhD under his mentorship. I also wish to thank Professor Peter H. Meckl for his steadfast guidance and inspiration in shaping the SCR-ASC modeling and diagnostic research. His support through Research Assistantships during most of my PhD made this work possible. I appreciate his constructive feedback, which was essential in developing my thesis research.
+I would like to acknowledge the support of my co-advisors, Professor Bin Yao and Professor Peter H. Meckl, for their consistent guidance, insights, and feedback throughout my PhD studies. I am deeply thankful to Professor Bin Yao for training me in control theory and for his continual encouragement and advice, which were instrumental in bringing this research together. I am grateful for the opportunity to pursue my PhD under his mentorship. I also wish to thank Professor Peter H. Meckl for his steadfast guidance and inspiration in shaping the SCR-ASC modelling and diagnostic research. His support through Research Assistantships during most of my PhD made this work possible. I appreciate his constructive feedback, which was essential in developing my thesis research.
 
 I would like to thank Professor Richard Voyles for providing hardware and laboratory support, as well as for assisting in defining a practical and meaningful research problem related to the Dexterous Hexrotor, my initial project during the PhD program. I am also grateful to Professor George Chiu for his time, thorough review, and valuable suggestions, which enhanced the quality and clarity of this thesis. I would also like to thank the School of Mechanical Engineering for providing TA support during the initial part of my PhD studies.
 
-I am sincerely grateful to Cummins Inc. for providing the data and sponsorship that enabled the SCR-ASC studies. I especially thank David Schmidt for his detailed discussions regarding system architectures, testing procedures, and truck data, which significantly influenced the modeling and diagnostic work. I also appreciate the support, insights, and collaboration of Adam Kidd, Larry Brunner, Tom Nelson, and Lyle Kocher throughout the project. I would like to acknowledge the foundational contributions of Kaushal Kamal Jain, whose earlier work established important groundwork for this research.
+I am sincerely grateful to Cummins Inc. for providing the data and sponsorship that enabled the SCR-ASC studies. I especially thank David Schmidt for his detailed discussions regarding system architectures, testing procedures, and truck data, which significantly influenced the modelling and diagnostic work. I also appreciate the support, insights, and collaboration of Adam Kidd, Larry Brunner, Tom Nelson, and Lyle Kocher throughout the project. I would like to acknowledge the foundational contributions of Kaushal Kamal Jain, whose earlier work established important groundwork for this research.
 
 Finally, I want to thank my friends and family, especially my wife Shruthi, for their unwavering encouragement, patience, and understanding. Their constant support has been invaluable, and this accomplishment would not have been possible without them.
 \end{acknowledgments}
