--- a/secs/0-front/5-abstract.tex
+++ b/secs/0-front/5-abstract.tex
@@ -20,6 +20,6 @@
         concentration of adsorption sites, a parameter estimation-based hypothesis-testing framework for aging detection
         is proposed. The detector based on saturated model parameters demonstrated greater effectiveness and robustness
         to NOx sensor cross-sensitivity. The detector's performance is validated using both test-cell data and data from
-        four long-haul trucks. Truck data, spanning a day, was collected at two different times: first, when the
+        four long-haul trucks. Truck data, spanning a day, were collected at two different times: first, when the
         catalyst was de-greened (new), and second, when it was confirmed to be aged in accordance with existing metrics.
 \end{abstract}
