--- a/secs/0-front/6-symbols.tex
+++ b/secs/0-front/6-symbols.tex
@@ -77,10 +77,10 @@
 \begin{abbreviations}
         A, B, C, D \ampeq  Different truck IDs used in the experimental data sets \\
         AG \ampeq  Aged \\
-        ASC \ampeq  Ammonia Slip Catalyst \\
+        ASC \ampeq  Ammonia Slip Catalysis \\
         CARB \ampeq  California Air Resources Board \\
         CDF \ampeq  Cumulative Distribution Function \\
-        CRLB \ampeq  Cramer-Rao Lower Bound \\
+        CRLB \ampeq  Cram\'{e}r-Rao Lower Bound \\
         CSTR \ampeq  Continuously Stirred Tank Reactor \\
         DEF \ampeq  Diesel Exhaust Fluid \\
         DG \ampeq  De-greened \\
@@ -112,7 +112,7 @@
         Flow-scaled $NO_x$ reduction efficiency \ampeq $\bar \eta_F(k) = \sfrac{\eta(k)}{u_{1F}(k)}$ \\
         Flow-normalized urea dosing \ampeq $u_{2F}(k) = \sfrac{u_{2}(k)}{F(k)}$ \\
         $NO_x$ reduction in a time step \ampeq $\eta(k) = u_1(k-1) - x_1(k)$ \\
-        Saturated Catalyst \ampeq  A catalyst with adsorption sites are occupied.\\
+        Saturated Catalyst \ampeq  A catalyst whose adsorption sites are occupied.\\
         $\tau-t_s$ Plot \ampeq  Plot of Residence Time vs Sampling Time.\\
         Unsaturated Catalyst \ampeq  A catalyst in which some adsorption sites are free.\\
 \end{nomenclature}
