--- a/secs/1-intro/0-intro.tex
+++ b/secs/1-intro/0-intro.tex
@@ -57,10 +57,10 @@ oxidizes excess ammonia at the end of the SCR bed (Figure~\ref{fig:exhaust_schem
 The NOx reduction capacity of the catalyst diminishes over time due to hydrothermal aging and the accumulation of
 contaminants, including excess urea, platinum, sulfur, and phosphorus \cite{matsumoto2016model}. While a robust
 urea-dosing controller may attempt to offset catalyst degradation
-\cite{chen2016estimation},\cite{herman2010diagnostic},\cite{hu2018failure} by increasing urea dosing, this strategy can
+\cite{chen2016estimation,herman2010diagnostic,hu2018failure} by increasing urea dosing, this strategy can
 accelerate aging and further elevate NOx and ammonia emissions. This has severe environmental and financial
 implications. Cummins Inc. had to recall 500,000 medium and heavy-duty trucks in 2018 due to faster SCR catalyst
-degradation, resulting in excessive NOx emissions \cite{jain2023model}. On-board diagnosis (OBD) of SCR catalyst aging
+degradation, resulting in excessive NOx emissions \cite{jain2023model}. On-board diagnostics (OBD) of SCR catalyst aging
 under real-world conditions would help meet increasingly stringent regulations. Some real-world limitations include the
 unavailability of ammonia sensors, the unobservability of catalyst state, and NOx sensor cross-sensitivity to ammonia.
 
