--- a/secs/2-data/0-subs/0-2_truck_data.tex
+++ b/secs/2-data/0-subs/0-2_truck_data.tex
@@ -22,7 +22,7 @@ pNOxInppm & ppm & $\con{NO_x}^{in}$ & Engine-Out $NO_x$\\
 In contrast, the truck data comprise on-board sensor measurements from four long-haul trucks collected during the study
 period (Table~\ref{tab::truck_data_mileage}). FTIR sensor measurements for species concentrations and tailpipe ammonia
 measurements are not available. The data sampling frequency is 1 Hz. The operating temperatures
-(Figure~\ref{fig::truck_data_temp_profiles}) recorded in the truck data range from 200 to 300 $^oC$, which is similar to
+(Figure~\ref{fig::truck_data_temp_profiles}) recorded in the truck data range from 200 to 300 $\lx{^o}{C}$, which is similar to
 the hFTP drive cycles of the test-cell data. However, the inlet and outlet $NO_x$ concentrations and urea dosing
 dynamics more closely resemble those observed in the RMC cycles. The truck data variables are summarized in
 Table~\ref{tab::truck_data_variables}.
@@ -58,7 +58,7 @@ be recovered through interpolation.
         \end{tabular}
 \end{table}
 
-% Truck Maping
+% Truck Mapping
 % Truck A - AD Transport (adt)
 % Truck B - Mesilla Valley (mes)
 % Truck C - Werner (wer)
