--- a/secs/2-data/1-res_time.tex
+++ b/secs/2-data/1-res_time.tex
@@ -30,7 +30,7 @@ An additional approximation assumes constant exhaust gas density across the data
 purpose of this analysis is to demonstrate that the mode of the residence time is substantially lower than the sampling
 interval, despite computational inaccuracies.
 \begin{align}
-        \rho \approx 1.2 e-3 \, g/cm^3 \quad \text{at} \quad 250 \lx{^o}{C} \\
+        \rho \approx 1.2 \times 10^{-3} \, g/cm^3 \quad \text{at} \quad 250 \lx{^o}{C} \\
         \tau^{test}_{mode} = 0.072 \,s \qquad
         \tau^{truck}_{mode} = 0.071 \,s
 \end{align}
