--- a/secs/2-data/2-data_units.tex
+++ b/secs/2-data/2-data_units.tex
@@ -28,7 +28,7 @@ pressure. Using the ideal gas law:
     P &= \text{Pressure of the exhaust gas (ambient pressure)} = 101.325 \: kPa\\
     M &= \text{Molecular weight of the exhaust gas} = 28.9652 \: g/mol\\
     T &= \text{Temperature of the exhaust gas in Kelvin}\\
-    R &= \text{Universal gas constant} = 8.314 \: J/(mol.K)
+    R &= \text{Universal gas constant} = 8.314 \: J/(mol \cdot K)
 \end{align*}
 \itbf{Note}: $P$ and $M$ are replaced with $(P_1 M_1 + P_2 M_2)$ when humidity of the exhaust gas is considered.
 \subsubsection{$\%$ Change in density for the temperature range of operation}
@@ -36,7 +36,7 @@ We have,
 \begin{align*}
     \frac{\delta \rho}{\rho} &= -\frac{\delta T}{T}
 \end{align*}
-In general the operating temperature is very high ($250 \,^0 C \approx 500 K$), and most of the data lies in $\pm 100 \, ^0 C$ region. Thus, the maximum change in density is less than $10\%$, whose effect on flow rate is far smaller compared to the change in mass flow rate itself. Thus, density can be assumed to be a constant for this process.
+In general the operating temperature is very high ($250 \,^\circ C \approx 500 K$), and most of the data lies in $\pm 100 \, ^\circ C$ region. Thus, the maximum change in density is less than $10\%$, whose effect on flow rate is far smaller compared to the change in mass flow rate itself. Thus, density can be assumed to be a constant for this process.
 \begin{align}
     \rho &= \rho_0
 \end{align}
