--- a/secs/3-governing_eqns/2-NH3ads_proc_dyn.tex
+++ b/secs/3-governing_eqns/2-NH3ads_proc_dyn.tex
@@ -18,7 +18,7 @@ of gaseous ammonia. We first derive the dynamics of the adsorption/desorption pr
     4 NH_3^{ads} + 3 O_2 &\xrightarrow[]{k_{oxi}} 2 N_2 + 6 H_2O \\
     NH_3 + \Theta_{free} &\xrightleftharpoons[k_{des}]{k_{ads}} NH_3^{ads}
 \end{align*}
-Thus, the rate of ammonia adsorption on the catalyst surface can be modeled as:
+Thus, the rate of ammonia adsorption on the catalyst surface can be modelled as:
 \begin{align*}
     \frac{d \con{NH_3}^{ads}}{dt} &= r_{ads} - r_{des} - r_{scr} - r_{oxi}\\
     r_{ads} &= k_{ads} \con{NH_3}^{in} \lr{\Gamma - \con{NH_3}^{ads}} \qquad \lrb{\Gamma = \frac{\Theta_{free} + \Theta_{occupied}}{A_{scr}}}\\
@@ -57,7 +57,7 @@ Thus,
 The molar storage on the catalyst surface changes at the end of every residence time and a "fresh" set of gaseous
 reactants enters the catalyst chamber. And, within the sample time $t_s$, the volumetric concentrations of the gaseous
 reactants can be considered constant. \itbf{Let there be $n$ residence times within one sample time.} It is implicitly
-assumed that there are integer number of residence times within one sample time. When that is not the case, the
+assumed that there are an integer number of residence times within one sample time. When that is not the case, the
 resulting error is attributed to model structure error.
 \begin{align}
     t_s &= n \tau
