--- a/secs/3-governing_eqns/4-NH3_proc_dyn.tex
+++ b/secs/3-governing_eqns/4-NH3_proc_dyn.tex
@@ -7,7 +7,7 @@ desorbs back to the gas phase at a rate that is proportional to the surface conc
     NH_3 + \Theta_{free} &\xrightleftharpoons[k_{des}]{k_{ads}} NH_3^{ads}
 \end{align*}
 
-Thus, the rate of change of gaseous $NH_3$ on the catalyst surface can be modeled as:
+Thus, the rate of change of gaseous $NH_3$ on the catalyst surface can be modelled as:
 \begin{align*}
     \frac{d \con{NH_3}^{scr}}{dt} &= k_{s2v} (-r_{ads} + r_{des}) \\
     r_{ads} &= k_{ads} \con{NH_3}^{in} \lr{\Gamma - \con{NH_3}^{ads}}\\
