--- a/secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex
+++ b/secs/3-governing_eqns/5-urea_dosing_proc_dyn.tex
@@ -6,7 +6,7 @@ The urea dosing dynamics involve the following reactions:
     NH_2 - CO - NH_2^*  &\longrightarrow  HNCO + NH_3
                 & &[\text{Urea decomposition}] \\
     HNCO + H_2O &\longrightarrow NH_3 + CO_2
-                & &[\text{Isocynic acid hydrolysis}] \\
+                & &[\text{Isocyanic acid hydrolysis}] \\
 \end{align*}
 
 The above reactions can be aggregated into:
