--- a/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
+++ b/secs/4-NOx_mdl/1-subs/change_in_nox_model.tex
@@ -1,4 +1,4 @@
-\section{Modeling using average concentration change of $NO_x$ due to reduction in a sample}
+\section{Modelling using average concentration change of $NO_x$ due to reduction in a sample}
 Let \textbf{$\eta$ denote the change in concentration from inlet to outlet $NO_x$ in one sample}. This is the change in
 concentration in the exhaust due to the $NO_x$ reduction.
 %
@@ -80,7 +80,7 @@ Explicitly writing the individual terms:
 \end{equation}
 The above equation can be simplified using the following two assumptions:
 \begin{itemize}
-        \item[$A1.$] The temperature doesn't change significantly across contiguous samples, i.e., $T(k-1) \approx T(k)$.
+        \item[$A1.$] The temperature does not change significantly across contiguous samples, i.e., $T(k-1) \approx T(k)$.
         \begin{align}
                 \implies \frac{k_{scr}(k)}{k_{scr}(k-1)} \approx 1
         \end{align}
