--- a/secs/4-NOx_mdl/2-subs/parm_est.tex
+++ b/secs/4-NOx_mdl/2-subs/parm_est.tex
@@ -1,7 +1,7 @@
 \subsection{Saturated Catalyst Model Parameter Estimation}
 
 The linear programming problem is solved using a quadratic polynomial approximation for $\pmb \phi \pmb \theta_{\Gamma
-scr}$. Both $k_{scr/asc}$ and $\Gamma$ are assumed to be monotonic functions of temperature but in opposing directions.
+scr}$. Both $k_{scr/ads}$ and $\Gamma$ are assumed to be monotonic functions of temperature but in opposing directions.
 Thus, a linear model for the product will not capture the change in monotonicity of the product that happens at a
 particular temperature. After a systematic analysis of various polynomial orders and temperature partitions, a quadratic
 model with two partitions was found to be the best approximation with minimum prediction error. The parameter estimates
