--- a/secs/4-NOx_mdl/2_catalyst_saturation.tex
+++ b/secs/4-NOx_mdl/2_catalyst_saturation.tex
@@ -37,7 +37,7 @@ Thus, substituting equation \ref{eqn::sigma_elim} into the above equations \ref{
         0                                                             & \text{if }
                 \sigma^{ub}(k) < 0
         \end{cases}
-        \label{eqn::eta_cases}
+        \label{eqn::eta_cases_physical}
 \end{align}
 %====
 From the derivation and the parametrization in the last section, specifically, equations \ref{eqn::eta_parm} and
@@ -72,7 +72,7 @@ Let,
         f_{\Gamma}(k) &= \lrb{\frac{u_1(k)}{F(k)}} \phi_2^T(k)  \theta_{sat}
 \end{align}
 
-Substituting the above parametrization into equation (\ref{eqn::eta_cases}):
+Substituting the above parametrization into equation (\ref{eqn::eta_cases_physical}):
 %===
 \begin{align}
         \eta(k+1) &=
