--- a/secs/4-NOx_mdl/3_validation.tex
+++ b/secs/4-NOx_mdl/3_validation.tex
@@ -88,7 +88,7 @@ Further, the parameter estimates are cross-validated on additional test data fro
 (Table~\ref{tab::cross_valid}). Thus, the switched nonlinear model consistently fits the data with a goodness of fit
 value greater than $50\%$ for all the test cases. While the linearized CSTR model, though identifiable, has no further
 room for improvement in terms of model refinement, the proposed hybrid nonlinear model has further potential for
-refinement, resulting in lower prediction errors than presented, by incorporating the unmodeled dynamics (such as
+refinement, resulting in lower prediction errors than presented, by incorporating the unmodelled dynamics (such as
 explicitly incorporating AMOX dynamics) using additional sensors. Moreover, the model offers the flexibility of
 incorporating more complex models of underlying physical properties (rate-constants, residence time, etc.) relaxing or
 reworking the assumptions to better fit the operating conditions.
