--- a/secs/5-sat_detect/2-param_dist.tex
+++ b/secs/5-sat_detect/2-param_dist.tex
@@ -13,7 +13,7 @@ condition (\ref{eqn::eta_bound}) on response of the saturated system.
         \label{eqn::eta_bound}
 \end{align}
 %===
-In the case of commercial $NO_x$ sensors, resulting error is modeled as a function of ammonia concentration and a
+In the case of commercial $NO_x$ sensors, the resulting error is modelled as a function of ammonia concentration and a
 temperature-dependent cross-sensitivity factor $\chi(T)$. This introduces a non-negative directional error
 $\lr{\varepsilon_\chi= \chi\lr{T(k)} \times \con{NH_3}^{out}\geq 0}$ into the tailpipe $NO_x$ measurement $y_1$.
 Accordingly, when the $NO_x$ reduction in a time-step is calculated from sensor measurements, $y_1(k) = x_1(k) +
