--- a/secs/5-sat_detect/3_subs/0_necc_cond.tex
+++ b/secs/5-sat_detect/3_subs/0_necc_cond.tex
@@ -17,12 +17,12 @@ change in the gain of urea-dosing controller to change the length of the data wh
         \caption{RMC $\eta_{sat}$ prediction with $\pm 20\%$ Urea Dosing}
         \label{fig::necessary_cond_sat}
 \end{figure}
-Figure-\ref{fig::necessary_cond_sim} shows no increase in $NO_x$ reduction when urea dosing is increased by $20\%$,
+Figure~\ref{fig::necessary_cond_sim} shows no increase in $NO_x$ reduction when urea dosing is increased by $20\%$,
 which indicates that maximum $NO_x$ reduction is already reached at nominal urea dosing. This could be because the
 catalyst is saturated or because the inlet $NO_x$ concentration is sufficiently low. Conversely, a $20\%$ decrease in
 urea dosing decreases $NO_x$ reduction. When the $-20\%$ urea-dosing data are used to estimate saturated-model
 parameters, the model predicts a substantially lower $NO_x$ reduction under saturation than for the nominal and $+20\%$
-dosing cases (Figure-\ref{fig::necessary_cond_sat}), the latter two giving essentially identical results. Thus for the nominal and $+20\%$ dosing cases, the catalyst is indeed saturated, and the parameter estimates show the same. However, for the $-20\%$ dosing case, the catalyst is not saturated in the data, instead the parameters fit the maximum surface coverage achieved $\lrf{\theta_{max} = \sfrac{\gamma_{max}}{\Gamma}}$ in the data, i.e.,
+dosing cases (Figure~\ref{fig::necessary_cond_sat}), the latter two giving essentially identical results. Thus for the nominal and $+20\%$ dosing cases, the catalyst is indeed saturated, and the parameter estimates show the same. However, for the $-20\%$ dosing case, the catalyst is not saturated in the data, instead the parameters fit the maximum surface coverage achieved $\lrf{\theta_{max} = \sfrac{\gamma_{max}}{\Gamma}}$ in the data, i.e.,
 \begin{align}
         \eta_{sat}(k+1) &= \frac{u_1(k)}{F(k)} \tau_0 \; k_{scr} \Gamma \theta_{max} = \phi_{sat} \theta_{sat}
 \end{align}
