--- a/secs/5-sat_detect/4-truck_aging.tex
+++ b/secs/5-sat_detect/4-truck_aging.tex
@@ -1,16 +1,16 @@
 \section{Aging Detection from Truck Data}
 %===
 The performance of the proposed aging detector is also demonstrated using the $NO_x$ sensor data from four long-haul
-trucks. The road data was collected from trucks operating in the United States for two days separated by a few years
-(Table~\ref{tab::truck_data_summary}) during which the catalyst has aged based on the existing performance measures. The
+trucks. The road data were collected from trucks operating in the United States for two days separated by a few years
+(Table~\ref{tab::truck_data_mileage}) during which the catalyst has aged based on the existing performance measures. The
 data contains measurements of $NO_x$ sensors before and after the catalyst, as well as other required variables
-including flow rate, temperature and urea injection rate. The preprocessed data is then partitioned into drive segments
+including flow rate, temperature and urea injection rate. The preprocessed data are then partitioned into drive segments
 with no breaks which correspond to a continuous driving period from engine start to engine stop. Unlike the test-cell data where the engine drive-cycles are repeatable and produce a significant fraction of samples
 where the catalyst is close to saturation, the truck data drive segments constitute varied driving conditions with fewer
 samples $\lrf{\leq 10\%}$ that are close to catalyst saturation. A necessary condition for the proposed parameter
 estimation and aging detection framework is that the data contains a sufficiently large number of samples close to
 catalyst saturation such that the asymptotic properties of the MLE and the test statistic hold (\ref{eqn::Ns_min}).
-Hence, the drive segment data is further pruned to only include segments with at least $150$ samples ($120$ in the case
+Hence, the drive segment data are further pruned to only include segments with at least $150$ samples ($120$ in the case
 of Truck C) close to catalyst saturation.
 \begin{align}
         N_{sat} &\geq N_{sat}^{min} \label{eqn::Ns_min} \\
