--- a/secs/5-sat_detect/6-detector_performance.tex
+++ b/secs/5-sat_detect/6-detector_performance.tex
@@ -2,7 +2,7 @@
 
 The study introduces a parameter estimation-based hypothesis testing algorithm for catalyst aging detection, based on
 the hypothesis that model parameters associated with catalyst storage capacity change with aging
-\cite{daya2018development} and \cite{daya2020kinetic}. The hypothesis testing framework requires not only the parameter
+\cite{daya2018development,daya2020kinetic}. The hypothesis testing framework requires not only the parameter
 estimates but also their distributions. To address this, the maximum likelihood estimation (MLE) framework and its
 asymptotic properties are employed. The linear programming problem (\ref{eqn::lin_prog}) for estimating the parameters
 of the saturated model is demonstrated to be equivalent to MLE under a half-normal distribution of the model-structure
