--- a/secs/n-conclusion/0-conclusion.tex
+++ b/secs/n-conclusion/0-conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusion and Future Work}
 
 This thesis addressed the problem of diagnosing aging in diesel-engine SCR--ASC aftertreatment systems using only
-on-board measurements that are available in long haul truck. The central idea was to treat aging detection as a
+on-board measurements that are available in long-haul trucks. The central idea was to treat aging detection as a
 parameter estimation-based hypothesis testing problem posed on a physically motivated model of $NO_x$ reduction
 dynamics. The resulting framework is non-intrusive, robust to practical limitations such as sensor sampling and $NO_x$
 sensor cross-sensitivity, and suitable for real-time implementation on an engine control unit.
@@ -11,7 +11,7 @@ causality reversal and loss of physical interpretability when multi-cell models 
 linearized, (ii) nonuniqueness of parameter estimation problem due to sum of exponential functions, and (iii) an
 inherent mismatch between model assumptions and realistic sampling rates in production sensors. These limitations
 motivated the development of a new modelling and estimation framework that respects physical conservation laws while
-remaining identifiable from available data. The key motivations and the resulting model aspects are summarized in the
+remaining identifiable from available data. The key motivations and the resulting model aspects are summarized in
 Figure~\ref{fig::problems_solved}.
 
 \begin{figure}[!ht]
