--- a/secs/n-conclusion/0_subs/1_contrib.tex
+++ b/secs/n-conclusion/0_subs/1_contrib.tex
@@ -35,9 +35,9 @@ The main contributions of this thesis are summarized below.
     \item \textbf{Model validation using test cell data:}
     The switched nonlinear model was validated using experimental test-cell data (RMC, Hot-FTP, and Cold-FTP) for both
                 degreened and aged catalysts. Across all cases, the model achieved goodness-of-fit values exceeding
-                $60\%$, and consistently outperformed the linearized CSTR model from the literature, whose fits were
+                $50\%$, and consistently outperformed the linearized CSTR model from the literature, whose fits were
                 typically below $30\%$ on the same data. The results demonstrate that explicitly enforcing conservation
-                over the sampling interval and modeling saturation yields a more accurate and physically interpretable
+                over the sampling interval and modelling saturation yields a more accurate and physically interpretable
                 description of SCR--ASC dynamics, while retaining a parsimonious parameter set.
 
     \item \textbf{Statistical hypothesis-testing framework for aging detection:}
