--- a/thesis.tex
+++ b/thesis.tex
@@ -10,7 +10,7 @@
 \input{./secs/0-template_options/te00-template-options.tex}
 % ==============================================================
 % Build the document this will select the document class based on :
-%    quick/debug/proof - Local simplified PurdueTheiss.cls file
+%    quick/debug/proof - Local simplified PurdueThesis.cls file
 %                final - Official PurdueThesis.cls file
 \RequirePackage{ifthen}
 \ifthenelse{\equal{\ZZbuildmode}{final}}
