--- a/secs/1-intro/subs/1-2_cstr.tex
+++ b/secs/1-intro/subs/1-2_cstr.tex
@@ -2,19 +2,18 @@
 
 A deductive approach to aging diagnostics models the dynamics of the signal-generating system, specifically the SCR-ASC
 system, and incorporates aging effects by tracking changes in selected model parameters. Numerous studies have addressed
-the modeling and control of SCR-ASC systems \cite{yuan2015diesel}. A common modelling strategy involves approximating the
+the modelling and control of SCR-ASC systems \cite{yuan2015diesel}. A common modelling strategy involves approximating the
 partial differential equation (PDE) model for the plug flow reaction as a set of ordinary differential equations (ODEs)
-using a series of Continuously Stirred Tank Reactors (CSTRs) (\cite{hsieh2011development}; \cite{nova2014urea}). The
-number of CSTRs implemented often serves as an indicator of model fidelity. For instance, \cite{chen2016estimation},
-\cite{ma2017observer}, \cite{devarakonda2009model}, \cite{hsieh2011development} employ four-cell CSTR models,
-\cite{hu2018failure},  \cite{hu2017improving}, \cite{stadlbauer2015adaptive}, \cite{schar2004control} utilize three-cell
-models, and \cite{jiang2019hydrothermal}, \cite{upadhyay2002modeling}, \cite{devarakonda2008adequacy} adopt two-cell
+using a series of Continuously Stirred Tank Reactors (CSTRs) \cite{hsieh2011development,nova2014urea}. The
+number of CSTRs implemented often serves as an indicator of model fidelity. For instance, \cite{chen2016estimation,ma2017observer,devarakonda2009model,hsieh2011development} employ four-cell CSTR models,
+\cite{hu2018failure,hu2017improving,stadlbauer2015adaptive,schar2004control} utilize three-cell
+models, and \cite{jiang2019hydrothermal,upadhyay2002modeling,devarakonda2008adequacy} adopt two-cell
 models. The single CSTR approach was initially justified in \cite{devarakonda2008adequacy}, where a nonlinear model was
 developed based on these assumptions and subsequently linearized for feedback control design
-(\cite{devarakonda2009model}). Observers have been developed to estimate the states associated with catalyst storage
-(\cite{ma2017observer}; \cite{jain2020term}). A method for detecting catalyst aging by observing changes in the
-catalyst's maximum storage capacity, modeled as an exponential function of temperature, was also introduced in
-\cite{ma2017observer} and \cite{jiang2019hydrothermal}. Additionally, an on-board diagnostics (OBD) approach for
+\cite{devarakonda2009model}. Observers have been developed to estimate the states associated with catalyst storage
+\cite{ma2017observer,jain2020term}. A method for detecting catalyst aging by observing changes in the
+catalyst's maximum storage capacity, modelled as an exponential function of temperature, was also introduced in
+\cite{ma2017observer,jiang2019hydrothermal}. Additionally, an on-board diagnostics (OBD) approach for
 catalyst aging, utilizing tailpipe $NO_x$ and ammonia measurements, was proposed in \cite{matsumoto2016model}. This
 method is based on the hypothesis of reduced adsorption sites and has been demonstrated on real-world trucks.
 
@@ -40,14 +39,14 @@ limitations.
 
 The model development is based on specific assumptions that reflect typical operating conditions and system behavior.
 The CSTR assumption underpins the construction of the reaction flow model for SCR reactions. Drawing on reduced order
-modelling results from previous studies, including \cite{devarakonda2008adequacy} and \cite{jain2023diagnostics}, the
+modelling results from previous studies, including \cite{devarakonda2008adequacy,jain2023diagnostics}, the
 number of reactions considered is reduced from the full set to three (Table~\ref{tab::react_rates}). The analysis
 focuses exclusively on the standard SCR reaction, with the assumption that all $NO_x$ in the exhaust gas is $NO$, since
-commercially available $NO_x$ sensors cannot differentiate between $NO$ and $NO_2$ (\cite{nova2014urea}). The slow SCR
+commercially available $NO_x$ sensors cannot differentiate between $NO$ and $NO_2$ \cite{nova2014urea}. The slow SCR
 reaction is omitted, as the exhaust flow rate ensures it does not significantly affect the concentration of tailpipe
 exhaust components. Mass transfer is neglected, indicating that the catalyst's chemical kinetics are reaction controlled
 because the standard SCR reaction rate exceeds the exhaust fluid flow rate. A $100\%$ nitrogen selectivity for ammonia
-oxidation is assumed for both SCR and ASC (\cite{jain2023diagnostics}). Furthermore, the reaction rates are assumed to
+oxidation is assumed for both SCR and ASC \cite{jain2023diagnostics}. Furthermore, the reaction rates are assumed to
 depend solely on the gas-phase concentrations of $NO_x$, $NH_3$, the adsorbed ammonia, and the available adsorption
 sites.
 
@@ -82,7 +81,7 @@ sites.
 In continuous stirred-tank reactors (CSTRs), reaction rates are governed by outlet concentrations, as defined by
 reaction rate expressions. This relationship arises from the uniform mixing assumption at steady state: fluid with a
 specified inlet concentration enters the CSTR, undergoes complete mixing, and reacts, resulting in outlet concentrations
-that match those within the reactor (Figure~\ref{fig::cstr_schematic}). When a plug-flow reactor is modeled as a single
+that match those within the reactor (Figure~\ref{fig::cstr_schematic}). When a plug-flow reactor is modelled as a single
 CSTR, the causality of the reaction rates is reversed. Employing multiple CSTRs introduces intermediate states, which
 alleviates the impact of this causality reversal. As a result, a valid CSTR model generally contains more states than
 can be measured, making the system unobservable. This limitation is one of the two key motivations behind the discrete
@@ -115,7 +114,7 @@ We have dynamics of the concentration of reactants from the mass balance for the
                             & \qquad - k_{scr} \con{NO_x}^{out} g_{sat}\lr{\con{NH_3}^{ads}} \label{eqn::nh3_ads_mass_bal}
 \end{align}
 
-The actual input to the system is urea (AdBlue ($32.5\%$ aqueous urea solution) (\cite{nova2014urea}))
+The actual input to the system is urea (AdBlue ($32.5\%$ aqueous urea solution) \cite{nova2014urea})
 injection that is converted to ammonia. This can be modelled by the following equation~(\ref{eqn::urea_inj}).
 
 \begin{equation}{\label{eqn::urea_inj}}
@@ -129,7 +128,7 @@ derived based on the available measurements \cite{charla2024reduced}.
 
 Furthermore, the hybrid dynamics modelled in the above equations capture the high-frequency reaction kinetics coupled
 with mass flow. The slowest process, or dominant mode, can be approximated as a first-order system with residence time
-as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (at least twice) the inverse of the residence time. Let $\\tau$ be the residence time of the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
+as the time constant. For effective sampling of such a system, the sampling frequency should be n-times (at least twice) the inverse of the residence time. Let $\tau$ be the residence time of the reacting flow through the SCR-ASC system, then the sampling frequency $f_s = 1/t_s$ should be:
 \begin{align}
     f_s &\geq \frac{n}{\tau}
     \implies t_s \leq \frac{\tau}{n} \qquad n \geq 2
