--- a/secs/2-data/4-data_preproc.tex
+++ b/secs/2-data/4-data_preproc.tex
@@ -45,7 +45,7 @@ Test-cell and truck data are preprocessed prior to system identification and val
                         \end{align}
                 \item Flow-scaled $NO_x$ reduction efficiency:
                         \begin{align}
-                                \eta_F(k) &= \frac{\eta(k)}{u_{1F}(k-1)}
+                                \bar \eta_F(k) &= \frac{\eta(k)}{u_{1F}(k-1)}
                         \end{align}
         \end{enumerate}
 \end{enumerate}
