--- a/secs/3-governing_eqns/1-reactions.tex
+++ b/secs/3-governing_eqns/1-reactions.tex
@@ -7,7 +7,7 @@ The following lists all the reactions that take place inside the SCR-ASC chamber
     NH_2 - CO - NH_2^*  &\longrightarrow  HNCO + NH_3
                 & &[\text{Urea decomposition}] \\
     HNCO + H_2O &\longrightarrow NH_3 + CO_2
-                & &[\text{Isocynic acid hydrolysis}] \\
+                & &[\text{Isocyanic acid hydrolysis}] \\
     %===
     NH_3 + \Theta_{free} &\leftrightharpoons NH_3(ads)
                          & &[\text{Ammonia Adsorption/Desorption}]\\
@@ -15,10 +15,10 @@ The following lists all the reactions that take place inside the SCR-ASC chamber
     4 NH_3 (ads) + 4 NO + O_2 &\longrightarrow 4 N_2 + 6 H_2O
                               & &[\text{Standard SCR reaction}]\\
     %===
-    2 NH_3 (ads) +  NO + N O_2 &\longrightarrow 2 N_2 + 3 H_2O
+    2 NH_3 (ads) +  NO + NO_2 &\longrightarrow 2 N_2 + 3 H_2O
                               & &[\text{Fast SCR reaction}]\\
     %===
-    4 NH_3 (ads) + 3N O_2 &\longrightarrow 3.5 N_2 + 6 H_2O
+    4 NH_3 (ads) + 3NO_2 &\longrightarrow 3.5 N_2 + 6 H_2O
                               & &[\text{Slow SCR reaction}]\\
     %===
     4 NH_3 + 3 O_2 &\longrightarrow 2 N_2 + 6 H_2O
@@ -32,9 +32,9 @@ The following lists all the reactions that take place inside the SCR-ASC chamber
                         & &[\text{NO oxidation}]
 \end{align*}
 
-Note that ammonia oxidation (AMOX) happens both on the surfaces of the SCR catalyst and the ASC catalyst in the
-mechanism that is similar, but SCR catalyst favors $NO_x$ reduction while ASC is specifically designed for ammonia
-oxidation. The Eley-Rideal reaction mechanism \cite{yuan2015diesel}, \cite{hsieh2011development}, \cite{nova2014urea} is
+Note that ammonia oxidation (AMOX) happens both on the surfaces of the SCR catalyst and the ASC catalyst through a
+similar mechanism, but the SCR catalyst favors $NO_x$ reduction while ASC is specifically designed for ammonia
+oxidation. The Eley-Rideal reaction mechanism \cite{yuan2015diesel,hsieh2011development,nova2014urea} is
 considered for interpreting the SCR reactions, where one reactant $(NO_x)$ is gaseous, and the other is adsorbed on the
 catalyst surface $(NH_3)$.
 
@@ -117,6 +117,6 @@ the nitrogen selectivity of that single AMOX reaction is assumed to be $100\%$. 
 than $225 \lx{^o}{C}$ \cite{jain2023diagnostics}, i.e., the temperature range of interest for most of the test and road
 conditions.
 
-This aggregation of reactions results in errors in the rate constant estimates, of all the SCR-ASC reactions.
+This aggregation of reactions results in errors in the rate constant estimates of all the SCR-ASC reactions.
 Specifically, the rate constant estimate for the $NO_x$ reduction will be lower than the actual value as only a part of
 the total adsorbed ammonia (on SCR catalyst) alone is involved in the reduction reaction.
