--- a/secs/3-governing_eqns/3-NOx_proc_dyn.tex
+++ b/secs/3-governing_eqns/3-NOx_proc_dyn.tex
@@ -8,7 +8,7 @@ the volumetric concentration of the gaseous $NO_x$ and the surface concentration
     4 NH_3 ^{ads} + 4 NO + O_2 &\xrightarrow[]{k_{scr}} 4 N_2 + 6 H_2O
 \end{align}
 
-Thus, the rate of $NO_x$ reduction on the catalyst surface can be modeled as:
+Thus, the rate of $NO_x$ reduction on the catalyst surface can be modelled as:
 \begin{align}
     \frac{d \con{NO_x}^{scr}}{dt} &= - k_{s2v} r_{scr} \\
     r_{scr} &= k_{scr} \con{NH_3}^{ads} \con{NO_x}^{in}\\
