--- a/secs/3-governing_eqns/6-proc_dyn.tex
+++ b/secs/3-governing_eqns/6-proc_dyn.tex
@@ -41,6 +41,6 @@ nonlinear and coupled with implicit dependence on temperature and flow rate. In 
 rewritten in a parametric form with standard state-space representation. For convenience and clarity '(k)' is dropped
 from the variables.
 
-Note that the tailpipe (gaseous) ammonia dynamics don't affect the $NO_x$ reduction dynamics and we don't have the
+Note that the tailpipe (gaseous) ammonia dynamics do not affect the $NO_x$ reduction dynamics and we do not have the
 necessary measurements for trucks for model parameter estimation. Moreover, we only need the models for $NO_x$ reduction
 and Ammonia adsorption for characterizing the I/O dynamics of the system using the measurements.
