--- a/secs/5-sat_detect/3-testcell_aging.tex
+++ b/secs/5-sat_detect/3-testcell_aging.tex
@@ -1,7 +1,7 @@
 \section{Parameter Estimation and Aging Detection in Test Cell Data}
 Using the parameter estimation approach outlined in the previous section, we analyze the test cell data to estimate the
 parameters of the saturated catalyst model. The parameter estimates using FTIR measurements from the test cell
-experiments are tabulated in Table-\ref{tab::parm_FTIR}. The parameters show consistency across repeated RMC (Ramped
+experiments are tabulated in Table~\ref{tab::parm_FTIR}. The parameters show consistency across repeated RMC (Ramped
 Mode Cycle) and Hot-FTP (Federal Test Procedure) tests on the same catalyst validating the estimation approach. However,
 the parameters vary significantly between RMC and Hot-FTP tests. This is predominantly due to the differences in the
 temperature ranges experienced by the catalyst during the tests, which affects the Arrhenius temperature dependence of
@@ -27,8 +27,8 @@ considered during the RMC tests is between 240°C and 360°C, while for the Hot-
 \end{table}
 % ======================================================================================================================
 The parameter estimates using $NO_x$ sensor measurements from the test-cell experiments are tabulated in
-Table-\ref{tab::parm_nox}. The parameter estimates are different from those obtained using FTIR measurements
-(Table-\ref{tab::parm_FTIR}) due to the cross-sensitivity of the $NO_x$ sensor to ammonia. However, the parameters show
+Table~\ref{tab::parm_nox}. The parameter estimates are different from those obtained using FTIR measurements
+(Table~\ref{tab::parm_FTIR}) due to the cross-sensitivity of the $NO_x$ sensor to ammonia. However, the parameters show
 consistency across repeated tests on the same catalyst under similar test conditions. The $NO_x$ sensor cross-
 sensitivity error $\varepsilon_{\chi}(T)$ introduces bias in the parameter estimates as part of the error that has the
 same temperature dependence as the model structure enters into the parameter estimates. Thus, the linear programming problem estimated the parameters with an added bias term as shown below:
@@ -38,7 +38,7 @@ same temperature dependence as the model structure enters into the parameter est
                     &= \sum_{k=0}^{N-1} \lr{ \phi^T(k) \lr{\theta_{sat} + \theta_{\varepsilon_{\chi}}} - \eta (k) }
 \end{align}
 Thus, the estimated parameters using $NO_x$ sensor measurements will have a bias dependent on the cross-sensitivity
-error characteristics of the sensor used. From, the experimental results, it is observed that $NO_x$ sensor
+error characteristics of the sensor used. From the experimental results, it is observed that $NO_x$ sensor
 cross-sensitivity reduces the difference between the estimates of aging-factor
 (Figure~\ref{fig::alpha_sat_ssd}, \ref{fig::alpha_sat_iod}) between aged and degreened catalysts. But the overall trend
 of change in parameter values remains consistent.
