--- a/secs/5-sat_detect/5-unconstrained_results.tex
+++ b/secs/5-sat_detect/5-unconstrained_results.tex
@@ -9,7 +9,7 @@ Similar to the saturated catalyst model, a subset of the unsaturated catalyst mo
 \end{align}
 where individual parameter vectors correspond to specific reaction dynamics as follows:
 \begin{enumerate}
-        \item $\theta_{\Gamma}$: Adoption dynamics related to the surface concentration of viable voids, $\Gamma$.
+        \item $\theta_{\Gamma}$: Adsorption dynamics related to the surface concentration of viable voids, $\Gamma$.
         \item $\theta_{\eta_{ads}}$: Adsorption dynamics related to adsorbed ammonia, $\sigma$.
         \item $\theta_{\eta_{od}}$: Oxidation dynamics and desorption dynamics that remove ammonia from the catalyst surface without reducing $NO_x$.
         \item $\theta_{\eta_{scr}}$: SCR dynamics that reduce $NO_x$ using the adsorbed ammonia.
@@ -21,7 +21,7 @@ estimates of $\theta_{\Gamma}$ and should be accounted for in the aging detectio
 \begin{align}
         \theta_{\nu} = \bm{\theta_{\eta_{ads}}^T & \theta_{\eta_{od}}^T & \theta_{\eta_{scr}}^T}^T
 \end{align}
-Thus, the aging detector (Wald test) should account for the effect of nuisance parameters in the test statistic. We therefore have the following Wald test \cite{wald1943tests},\cite{kay1998detection} with nuisance parameters for aging detection using the unsaturated catalyst model.
+Thus, the aging detector (Wald test) should account for the effect of nuisance parameters in the test statistic. We therefore have the following Wald test \cite{wald1943tests,kay1998detection} with nuisance parameters for aging detection using the unsaturated catalyst model.
 \begin{align}
 \text{Decide } \mathcal{H}_1 \text{ if} & \qquad \\
         T_w &= \lr{\hat \theta_{\Gamma} - \theta_{\Gamma}^{dg}}^T \lrf{\lrb{I^{-1} (\hat \theta)}_{\theta_{\Gamma} \theta_{\Gamma}}}^{-1} \lr{\hat \theta_{\Gamma} - \theta_{\Gamma}^{dg}} \geq \beta
